--- a/app/assets/stylesheets/5-Sidebar-Component.scss
+++ b/app/assets/stylesheets/5-Sidebar-Component.scss
@@ -11,6 +11,8 @@
   padding-left: 2%;
   font-size: 85%;
   font-weight: bold;
+  isolation: isolate;
+  margin-bottom: 50px;
 
   #fullLogo {
     display: flex;
