--- a/app/assets/stylesheets/6-MusicPlayer-Component.scss
+++ b/app/assets/stylesheets/6-MusicPlayer-Component.scss
@@ -14,15 +14,19 @@
   justify-content: center;
   align-items: center;
   
-  padding-bottom: 20px;
+  // padding-bottom: 20px;
 
 }
 
 #pButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   cursor: default;
   color: white;
   font-size: 50px;
-  padding: 20px;
+  padding: 10px;
 }
 
 #pButton:hover {
@@ -32,7 +36,7 @@
 }
 
 .pButton-container {
-  width: 60px;
-  height: 60px;
-  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
