--- a/app/assets/stylesheets/8-Search-Component.scss
+++ b/app/assets/stylesheets/8-Search-Component.scss
@@ -1,5 +1,11 @@
 .search-results {
-  background-color: black;
-  height: 100%;
+  position: absolute;
+  background-color: #121212;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  overflow: hidden;
   width: 100%;
+  height: 100%;
+  padding: 10px;
+  z-index: 0;
 }
