--- a/app/assets/stylesheets/9-Home-Page-Component.scss
+++ b/app/assets/stylesheets/9-Home-Page-Component.scss
@@ -1,3 +1,53 @@
 .home-page-container {
-  
+  position: absolute;
+  background-color: #121212;
+  width: 100%;
+  height: 200%;
+
+  .inner-home-page-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 60px 20px 20px 247px;
+    width: auto;
+    height: 100%;
+    overflow: hidden;
+
+
+    .discover-container {
+      color: white;
+      // overflow: hidden;
+      font-family: 'Montserrat', sans-serif;
+      
+      padding: 10px 0px 10px 20px;
+      width: 90%;
+      height: 100%;
+      margin: 10px;
+      
+      display: flex;
+      flex-direction: column; 
+      
+      h1 {
+        font-weight: bold;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 25px;
+        margin-bottom: 20px;
+      }
+
+      
+      .discover-index {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        
+        height: 100%;
+        width: 100%;
+
+        div {
+          height: 100%;
+          width: 100%;
+        }
+      }
+    }
+  }
 }
