--- a/app/assets/stylesheets/8-Search-Component.scss
+++ b/app/assets/stylesheets/8-Search-Component.scss
@@ -1,11 +1,28 @@
-.search-results {
+.search-results-container {
   position: absolute;
   background-color: #121212;
   color: white;
   font-family: 'Montserrat', sans-serif;
   overflow: hidden;
   width: 100%;
-  height: 100%;
+  height: 1280px;
   padding: 10px;
   z-index: 0;
+  
+  .inner-search-results-container {
+    position: relative;
+    background-color: #121212;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    overflow: hidden;
+    margin: 60px 0px 100px 247px;
+    
+    width: 1000px;
+    height: 100%;
+    padding: 10px;
+    overflow: hidden;
+
+  }
+  
+  
 }
