--- a/app/assets/stylesheets/12-Album-Index-Component.scss
+++ b/app/assets/stylesheets/12-Album-Index-Component.scss
@@ -1,12 +1,18 @@
+.album-index-item-container a {
+  text-decoration: none;
+  color: white;
+}
+
 .album-index-list {
   display: flex;
   flex-direction: row;
   width: 100%;
   height: 100%;
+  margin-top: 20px;
 
   li {
     width: 23%;
-    height: 80%;
+    height: 65%;
     margin-right: 40px;
   }
 }
@@ -17,33 +23,77 @@
   justify-content: center;
   align-items: center;
   background-color: #2a2a2a;
+  text-decoration: none;
 
   padding: 8px;
-  border-radius: 1%;
+  border-radius: 2%;
   height: 100%;
-  width: 100%;
-  
-  .button-logo {
-    height: 100px;
-    width: 100px;
-    // margin: 20px;
-    cursor: pointer;
-    display: none;
-  }
+  width: 50%;
 
-  .album-photo {
-    height: 95%;
-    width: 95%;
+  // .button-logo {
+  //   visibility: visible;
+  //   height: 60px;
+  //   width: 60px;
+    
+  //   position: relative;
+  //   left: 65px;
+  //   bottom:  80px;
+  // }
+  
+  // .button-logo:hover {
+  //   cursor: pointer;
+  //   visibility: visible;
+  //   z-index: 2;
+  // }
+  
+  .album-item-images {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    padding-top: 5px;
+  
+    .album-photo {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 95%;
+      width: 95%;
+      object-fit: cover;
+    }
   }
   
-  .album-title {
-    font-size: 15px;
-    // margin-top: 25px;
-    
-    color: white;
+  .album-item-details {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
-  }
+    flex-direction: column;
 
+    position: relative;
+    top: 15px;
+
+    h1.album-title {
+      font-size: 15px;
+      color: white;
+      padding-bottom: 10px;
+      margin-left: 7px;
+
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+    }
+    
+    p {
+      color: lightgray;
+      font-weight: 600;
+      font-size: 13px;
+      padding-bottom: 10px;
+      margin-left: 7px;
+      
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+    }
+  }
 }
