--- a/app/assets/stylesheets/13-Artist-Index-Component.scss
+++ b/app/assets/stylesheets/13-Artist-Index-Component.scss
@@ -1,12 +1,18 @@
+.artist-index-item-container a {
+  text-decoration: none;
+  color: white;
+}
+
 .artist-index-list {
   display: flex;
   flex-direction: row;
   width: 100%;
   height: 100%;
-
+  margin-top: 20px;
+  
   li {
     width: 23%;
-    height: 80%;
+    height: 65%;
     margin-right: 40px;
   }
 }
@@ -15,35 +21,63 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   background-color: #2a2a2a;
+  text-decoration: none;
 
   padding: 8px;
-  border-radius: 1%;
+  border-radius: 2%;
   height: 100%;
-  width: 100%;
-  
-  .button-logo {
-    height: 100px;
-    width: 100px;
-    // margin: 20px;
-    cursor: pointer;
-    display: none;
+  width: 50%;
+
+  .artist-item-images {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    margin-top: 10px;
+    
+      .artist-photo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 90%;
+        object-fit: cover;
+        border-radius: 100%;
+      }
   }
 
-  .artist-photo {
-    height: 95%;
-    width: 95%;
-  }
-  
-  .artist-title {
-    font-size: 15px;
-    // margin-top: 25px;
-    
-    color: white;
+  .artist-item-details {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
-  }
+    flex-direction: column;
 
+    position: relative;
+    top: 15px;
+      
+    h1.artist-title {
+      font-size: 15px;
+      color: white;
+      padding-bottom: 10px;
+      margin-left: 7px;
+
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+    }
+    
+    p {
+      color: lightgray;
+      font-weight: 600;
+      font-size: 13px;
+      padding-bottom: 10px;
+      margin-left: 7px;
+      
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+    }
+  }
 }
