--- a/app/assets/stylesheets/8-Search-Component.scss
+++ b/app/assets/stylesheets/8-Search-Component.scss
@@ -1,28 +1,62 @@
 .search-results-container {
   position: absolute;
   background-color: #121212;
+  width: 100%;
+  height: 250%;
   color: white;
   font-family: 'Montserrat', sans-serif;
-  overflow: hidden;
-  width: 100%;
-  height: 1280px;
-  padding: 10px;
-  z-index: 0;
-  
+  padding-bottom: 125px;
   .inner-search-results-container {
-    position: relative;
-    background-color: #121212;
-    color: white;
-    font-family: 'Montserrat', sans-serif;
-    overflow: hidden;
-    margin: 60px 0px 100px 247px;
-    
-    width: 1000px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 60px 20px 20px 247px;
+    width: auto;
     height: 100%;
-    padding: 10px;
     overflow: hidden;
+    
+    .filtered-container {
+      color: white;
+      font-family: 'Montserrat', sans-serif;
+      
+      padding: 10px 0px 10px 20px;
+      width: 90%;
+      height: 100%;
+      margin: 10px;
+      
+      display: flex;
+      flex-direction: column; 
+      
+      h1 {
+        font-weight: bold;
+        font-family: 'Montserrat', sans-serif;
+      }
+      
+      .search-categories {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        
+        div {
+          height: 100%;
+          width: 100%;
+        }
 
+        ul {
+          list-style-type: none;
+          margin-top: 10px;
+          height: 100%;
+          width: 100%;
+        }
+        
+        li {
+          width: 23%;
+          height: 68%;
+          margin-right: 40px;
+          text-decoration: none;
+        }
+      }
+    }
   }
-  
-  
 }
