--- a/app/assets/stylesheets/9-Home-Page-Component.scss
+++ b/app/assets/stylesheets/9-Home-Page-Component.scss
@@ -1,8 +1,29 @@
+* {
+
+        
+}
+::-webkit-scrollbar {
+width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background:#121212;
+}
+
+::-webkit-scrollbar-thumb {
+background: #888; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+background: #999; 
+}
+
 .home-page-container {
   position: absolute;
   background-color: #121212;
   width: 100%;
-  height: 200%;
+  height: 250%;
+  padding-bottom: 120px;
 
   .inner-home-page-container {
     display: flex;
@@ -12,11 +33,11 @@
     width: auto;
     height: 100%;
     overflow: hidden;
-
+    
+      
 
     .discover-container {
       color: white;
-      // overflow: hidden;
       font-family: 'Montserrat', sans-serif;
       
       padding: 10px 0px 10px 20px;
@@ -30,8 +51,6 @@
       h1 {
         font-weight: bold;
         font-family: 'Montserrat', sans-serif;
-        font-size: 25px;
-        margin-bottom: 20px;
       }
 
       
