--- a/app/assets/stylesheets/1-Navbar-Component.scss
+++ b/app/assets/stylesheets/1-Navbar-Component.scss
@@ -113,6 +113,7 @@
       padding: 10px 15px;
       margin-left: 20px;
       border-radius: 75%;
+      color: white;
 
       cursor: pointer;
       background-color: rgba(0,0,0,.7)
@@ -208,6 +209,7 @@
       padding: 10px 15px;
       margin-left: 20px;
       border-radius: 75%;
+      color: white;
 
       cursor: pointer;
       background-color: rgba(0,0,0,.7)
@@ -327,6 +329,7 @@
       padding: 10px 15px;
       margin-left: 20px;
       border-radius: 75%;
+      color: white;
 
       cursor: pointer;
       background-color: rgba(0,0,0,.7)
