Style show page for songs and index items for home and search

--- a/app/assets/stylesheets/12-Album-Index-Component.scss
+++ b/app/assets/stylesheets/12-Album-Index-Component.scss
@@ -30,7 +30,7 @@
   height: 100%;
   width: 50%;
 
-  // .button-logo {
+  // .greenButton {
   //   visibility: visible;
   //   height: 60px;
   //   width: 60px;
@@ -40,7 +40,7 @@
   //   bottom:  80px;
   // }
   
-  // .button-logo:hover {
+  // .greenButton:hover {
   //   cursor: pointer;
   //   visibility: visible;
   //   z-index: 2;
