--- a/app/assets/stylesheets/6-MusicPlayer-Component.scss
+++ b/app/assets/stylesheets/6-MusicPlayer-Component.scss
@@ -14,9 +14,18 @@
   justify-content: center;
   align-items: center;
   
+  audio::-webkit-media-controls-timeline-container,
+  audio::-webkit-media-controls-current-time-display,
+  audio::-webkit-media-controls-time-remaining-display,
+  audio::-webkit-media-controls-timeline,
+  audio::-webkit-media-controls-volume-slider-container,
+  audio::-webkit-media-controls-volume-slider {
+    display: flex;
+    background-color: red;
+  }
+}
   // padding-bottom: 20px;
 
-}
 
 #pButton {
   display: flex;
