--- a/app/assets/stylesheets/7-Song-Index-Component.scss
+++ b/app/assets/stylesheets/7-Song-Index-Component.scss
@@ -30,7 +30,7 @@
   height: 100%;
   width: 50%;
   
-  // .button-logo {
+  // .greenButton {
   //   visibility: visible;
   //   height: 60px;
   //   width: 60px;
@@ -41,7 +41,7 @@
   //   box-shadow: 15px black;
   // }
 
-  // .button-logo:hover {
+  // .greenButton:hover {
   //   cursor: pointer;
   //   visibility: visible;
   //   z-index: 2;
