--- a/app/assets/stylesheets/14-Show-Header.scss
+++ b/app/assets/stylesheets/14-Show-Header.scss
@@ -23,12 +23,12 @@
       flex-direction: row;
       margin: 20px 35px 0px 35px;
 
-      .song-item-photo {
+      .item-photo {
         height: 225px;
         width: 225px;
       }
 
-      .song-item-details {
+      .item-details {
         display: flex;
         justify-content: space-between;
         align-items: space-between;
@@ -39,18 +39,18 @@
           font-size: 15px;
         }
 
-        .song-title {
+        .title {
           font-size: 50px;
           font-weight: bold;
         }
 
-        .song-item-inner-details  {
+        .item-inner-details  {
           display: flex;
           justify-content: space-evenly;
           align-items: center;
           flex-direction: row;
 
-          .song-item-artist-photo {
+          .item-artist-photo {
             border-radius: 100%;
             height: 20px;
             width: 20px;
@@ -73,7 +73,7 @@
       border-top: 2px solid black;
       margin-top: 35px;
 
-      .album-item-play-like {
+      .item-play-like {
         display: flex;
         justify-content: flex-start;
         align-items: flex-end;
@@ -118,6 +118,7 @@
           display: flex;
           justify-content: space-between;
           flex-direction: row;
+          cursor: pointer;
         }
         
         .playlist-item:hover {
