--- a/app/assets/stylesheets/6-MusicPlayer-Component.scss
+++ b/app/assets/stylesheets/6-MusicPlayer-Component.scss
@@ -8,10 +8,10 @@
   font-size: 300%;
   bottom: 0%;
   z-index: 5;
-
+  
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   
   audio::-webkit-media-controls-timeline-container,
@@ -23,29 +23,222 @@
     display: flex;
     background-color: red;
   }
-}
-  // padding-bottom: 20px;
+
+  .left-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: 15px;
+    width: 125px;
+
+    .music-player-photo {
+      height: 60px;
+      width: 60px;
+      margin-right: 15px;
+    }
+    
+    h1 {
+      font-size: 15px;
+    }
+    
+    p {
+      font-size: 10px;
+      
+    }
+    
+  }
+  
+  .middle-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 50%;
+
+    .middle-top-container {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      margin-top: 5px;
+      
+      .shuffleButton-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        #shuffleButton {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          
+          cursor: default;
+          color: white;
+          font-size: 20px;
+          padding: 10px;
+        }
+
+        #shuffleButton:hover {
+          cursor: default; 
+          color: white;
+          transform: scale(1.1);
+        } 
+      }
+      
+      .prevButton-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        #prevButton {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        
+          cursor: default;
+          color: white;
+          font-size: 20px;
+          padding: 10px;
+        }
+        
+        #prevButton:hover {
+          cursor: default; 
+          color: white;
+          transform: scale(1.1);
+        }
+      }
+
+      
+      .pButton-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        #pButton {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        
+          cursor: default;
+          color: white;
+          font-size: 40px;
+          padding: 10px;
+        }
+        
+        #pButton:hover {
+          cursor: default; 
+          color: white;
+          transform: scale(1.1);
+        }
+      }
+
+      
+      .nextButton-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        #nextButton {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        
+          cursor: default;
+          color: white;
+          font-size: 20px;
+          padding: 10px;
+        }
+        
+        #nextButton:hover {
+          cursor: default; 
+          color: white;
+          transform: scale(1.1);
+        }
+      }
+
+      .loopButton-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        #loopButton {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        
+          cursor: default;
+          color: white;
+          font-size: 20px;
+          padding: 10px;
+        }
+        
+        #loopButton:hover {
+          cursor: default; 
+          color: white;
+          transform: scale(1.1);
+        }
+      }
+    }
+    
+    .middle-bottom-container {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 15px;
+      width: 100%;
+
+      .slidecontainer {
+        display: flex;
+        flex-direction: row;
+        width: 75%;
+
+        #myRange.slider {
+          width: 100%;
+        }
+      }
+
+      #audioStartTime, #audioEndTime {
+        font-size: 20px;
+      }
+    }
+    
+  }
+  
+  .right-container {
+    display: flex;
+    flex-direction: row;
+    margin-right: 20px;
+    width: 170px;
+
+    .volume-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: row;
+
+      #volumeButton {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+        color: white;
+        cursor: pointer;
+      }
+      
+    }
+    
+    .volume-slidecontainer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      
+      #myVolume.slider {
+        margin-left: 10px;
+      }
+    }
+    
+    
+  }
 
 
-#pButton {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  cursor: default;
-  color: white;
-  font-size: 50px;
-  padding: 10px;
-}
-
-#pButton:hover {
-  cursor: default; 
-  color: white;
-  transform: scale(1.1);
-}
-
-.pButton-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
