--- a/app/assets/stylesheets/5-Sidebar-Component.scss
+++ b/app/assets/stylesheets/5-Sidebar-Component.scss
@@ -61,7 +61,7 @@
       .heart-bg {
         width: 30px;
         height: 30px;
-        background-image: linear-gradient(to bottom right, blue, lightblue,);
+        background-image: linear-gradient(to bottom right, rgb(52, 17, 169),  rgb(154, 186, 166));
       }
       
       #topside-buttons {
