--- a/app/assets/stylesheets/10-Library-Component.scss
+++ b/app/assets/stylesheets/10-Library-Component.scss
@@ -1,31 +1,69 @@
-.main-library-container {
+.outer-library-container {
   position: absolute;
   background-color: #121212;
   width: 100%;
   height: 100%;
+  color: white;
   overflow: hidden;
-  // .library-mock-sidebar {
-  //   position: relative;
-  //   width: 247px;
-  //   height: 100%;
-  // }
-  .library-container {
-    // display: flex;
-    // justify-content: flex-end;
-    // align-items: center;
-    position: relative;
-    background-color: #121212;
-    color: white;
-    font-family: 'Montserrat', sans-serif;
-    overflow: hidden;
-    margin: 60px 0px 100px 247px;
-  
-    width: 1000px;
-    height: 100%;
-    padding: 10px;
-    overflow: hidden;
-    // z-index: 0;
-    // padding: 100px 280px;
+  margin-bottom: 100px;
+  font-family: 'Montserrat', sans-serif;
+
+  .inner-library-container {
+    display: flex;
+    flex-direction: column;
+    background-color: transparent;
+    
+    margin: 60px 0px 100px 260px;
+    height: 70%;
+    width: 78.5%;
+    overflow: auto;
+    overflow-x: hidden;
+    margin-bottom: 250px;
+    padding-bottom: 100px;
+    
+    .library-container {
+      color: white;
+      font-family: 'Montserrat', sans-serif;
+      
+      padding: 20px 0px 20px 0px;
+      width: 100%;
+      height: auto;
+      margin: 10px;
+      margin-bottom: 20px;
+      
+      display: flex;
+      flex-direction: column; 
+      
+      h1 {
+        font-weight: bold;
+        font-family: 'Montserrat', sans-serif;
+      }
+              
+      div {
+        height: 105%;
+        width: 100%;
+      }
+
+      ul {
+        list-style-type: none;
+        margin-top: 10px;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-content: flex-start;
+        gap: 40px;
+        
+        li {
+          width: 200px;
+          height: 250px;
+          text-decoration: none;
+          margin: 10px 0px;
+          object-fit: cover;
+        }
+      }
+    }
   }
 }
 
