--- a/app/assets/stylesheets/12-Album-Index-Component.scss
+++ b/app/assets/stylesheets/12-Album-Index-Component.scss
@@ -21,7 +21,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   background-color: #2a2a2a;
   text-decoration: none;
 
@@ -30,37 +29,19 @@
   height: 100%;
   width: 50%;
 
-  // .greenButton {
-  //   visibility: visible;
-  //   height: 60px;
-  //   width: 60px;
-    
-  //   position: relative;
-  //   left: 65px;
-  //   bottom:  80px;
-  // }
-  
-  // .greenButton:hover {
-  //   cursor: pointer;
-  //   visibility: visible;
-  //   z-index: 2;
-  // }
-  
   .album-item-images {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    width: 100%;
-    padding-top: 5px;
   
     .album-photo {
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 95%;
-      width: 95%;
       object-fit: cover;
+      height: 180px;
+      width: 190px;
+      padding-top: 5px;
     }
   }
   
