--- a/app/assets/stylesheets/2-SignUp-Component.scss
+++ b/app/assets/stylesheets/2-SignUp-Component.scss
@@ -20,23 +20,29 @@
       font-weight: 700;
       font-size: 25px;
     }
-    
-    .fb-signup-button {
-      background-color: rgb(58, 88, 151);
-      border-radius: 500px;
-      font-weight: 700;
-      letter-spacing: 1px;
-      padding: 15px 10px 15px 10px;
-      width: 105%;
-      color: rgb(255, 255, 255);
-      text-transform: uppercase;
-      border: none;
-    }
 
-    .fb-signup-button:hover {
-      background-color:rgb(55, 94, 177);
-      cursor: pointer;
-    } 
+    .login-buttons-demo {
+      display: flex;
+      width: 106%;
+      justify-content: center;
+      
+      .demo-login-button {
+        background-color: rgb(58, 88, 151);
+        border-radius: 500px;
+        font-weight: 700;
+        letter-spacing: 3px;
+        padding: 15px 10px 15px 10px;
+        width: 105%;
+        color: rgb(255, 255, 255);
+        text-transform: uppercase;
+        border: none;
+      }
+      
+      .demo-login-button:hover {
+        background-color:rgb(55, 94, 177);
+        cursor: pointer;
+      } 
+    }     
     
     .signup-or {
       padding-top: 15px;
