--- a/app/assets/stylesheets/3-Login-Component.scss
+++ b/app/assets/stylesheets/3-Login-Component.scss
@@ -10,6 +10,7 @@
   right: 33%;
   font-weight: 600;
   padding-top: 75px;
+  overflow: visible;
   
   .login-inner-header {
     text-align: center;
@@ -21,60 +22,29 @@
       font-weight: 700;
       font-size: 15px;
     }
-    
-    .fb-login-button {
-      background-color: rgb(58, 88, 151);
-      border-radius: 500px;
-      font-weight: 700;
-      letter-spacing: 3px;
-      padding: 15px 10px 15px 10px;
-      width: 105%;
-      color: rgb(255, 255, 255);
-      text-transform: uppercase;
-      border: none;
+
+    .login-buttons-demo {
+      display: flex;
+      width: 106%;
+      justify-content: center;
       
-    }
-    
-    .fb-login-button:hover {
-      background-color:rgb(55, 94, 177);
-      cursor: pointer;
-    } 
-    
-    .apple-login-button {
-      color: #fff;
-      background-color: #000;
-      border-radius: 500px;
-      font-weight: 700;
-      letter-spacing: 3px;
-      padding: 15px 10px 15px 10px;
-      width: 105%;
-      text-transform: uppercase;
-      border: none;
-    }
-    
-    .apple-login-button:hover {
-      background-color: rgb(59, 56, 56);
-      cursor: pointer;
-    } 
-    
-    .google-login-button {
-      color: #616467;
-      box-shadow: inset 0 0 0 2px #616467;
-      background-color: transparent;
-      border-radius: 500px;
-      font-weight: 700;
-      letter-spacing: 3px;
-      padding: 15px 10px 15px 10px;
-      width: 105%;
-      text-transform: uppercase;
-      border: none;
-    }
-    
-    .google-login-button:hover {
-      background-color: #616467;
-      color: white;
-      cursor: pointer;
-    } 
+      .demo-login-button {
+        background-color: rgb(58, 88, 151);
+        border-radius: 500px;
+        font-weight: 700;
+        letter-spacing: 3px;
+        padding: 15px 10px 15px 10px;
+        width: 105%;
+        color: rgb(255, 255, 255);
+        text-transform: uppercase;
+        border: none;
+      }
+      
+      .demo-login-button:hover {
+        background-color:rgb(55, 94, 177);
+        cursor: pointer;
+      } 
+    }     
     
     .login-or {
       padding-top: 0px;
@@ -133,12 +103,11 @@
       border-radius: 100px;
       font-weight: 700;
       letter-spacing: 3px;
-      width: 45%;
+      width: 250%;
       color: white;
       text-transform: uppercase;
       border: none;
       margin-top: 20px;
-      margin-right: 15px;
     }
     
     .form-login-button:hover {
@@ -146,44 +115,25 @@
       color: white;
       cursor: pointer;
     } 
-    
-    .demo-login-button {
-      background-color:rgb(58, 88, 151);
-      padding: 15px 10px 15px 10px;
-      border-radius: 100px;
-      font-weight: 700;
-      letter-spacing: 3px;
-      width: 45%;
-      color: white;
-      text-transform: uppercase;
-      border: none;
-      margin-top: 20px;
-    }
-    
-    .demo-login-button:hover {
-      background-color: rgb(55, 94, 177);
-      color: white;
-      cursor: pointer;
-    } 
   }   
   
   .signup-redirect {
-    color: #616467;
-    box-shadow: inset 0 0 0 2px #616467;
-    background-color: transparent;
-    border-radius: 500px;
-    font-weight: 700;
-    letter-spacing: 3px;
-    padding: 15px 10px 15px 10px;
-    width: 300%;
-    text-transform: uppercase;
-    border: none;
-  
+      color: #616467;
+      box-shadow: inset 0 0 0 2px #616467;
+      background-color: transparent;
+      border-radius: 500px;
+      font-weight: 700;
+      letter-spacing: 3px;
+      padding: 15px 10px 15px 10px;
+      width: 300%;
+      text-transform: uppercase;
+      border: none;
   }
   
   .signup-redirect:hover {
-    background-color: #616467;
-    color: white;
+    background-color: #000;
     cursor: pointer;
+    color: white;
+    box-shadow: inset 0 0 0 2px white; 
   } 
 }
