--- a/app/assets/stylesheets/6-MusicPlayer-Component.scss
+++ b/app/assets/stylesheets/6-MusicPlayer-Component.scss
@@ -35,6 +35,7 @@
       height: 60px;
       width: 60px;
       margin-right: 15px;
+      object-fit: cover;
     }
     
     h1 {
@@ -65,23 +66,29 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
 
         #shuffleButton {
           display: flex;
           justify-content: center;
           align-items: center;
           
-          cursor: default;
+          cursor: pointer;
           color: white;
           font-size: 20px;
           padding: 10px;
+          padding-bottom: 5px;
         }
 
         #shuffleButton:hover {
-          cursor: default; 
+          cursor: pointer; 
           color: white;
           transform: scale(1.1);
         } 
+        
+        #shuffleDot {
+          font-size: 5px;
+        }
       }
       
       .prevButton-container {
@@ -93,7 +100,7 @@
           display: flex;
           justify-content: center;
           align-items: center;
-        
+          
           cursor: default;
           color: white;
           font-size: 20px;
@@ -106,7 +113,7 @@
           transform: scale(1.1);
         }
       }
-
+      
       
       .pButton-container {
         display: flex;
@@ -117,7 +124,7 @@
           display: flex;
           justify-content: center;
           align-items: center;
-        
+          
           cursor: default;
           color: white;
           font-size: 40px;
@@ -130,7 +137,7 @@
           transform: scale(1.1);
         }
       }
-
+      
       
       .nextButton-container {
         display: flex;
@@ -141,7 +148,7 @@
           display: flex;
           justify-content: center;
           align-items: center;
-        
+          
           cursor: default;
           color: white;
           font-size: 20px;
@@ -154,27 +161,34 @@
           transform: scale(1.1);
         }
       }
-
+      
       .loopButton-container {
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
         
         #loopButton {
           display: flex;
           justify-content: center;
           align-items: center;
-        
+          
           cursor: default;
           color: white;
           font-size: 20px;
           padding: 10px;
+          padding-bottom: 5px;
         }
         
         #loopButton:hover {
           cursor: default; 
           color: white;
           transform: scale(1.1);
+        }
+        
+        
+        #loopDot {
+          font-size: 5px;
         }
       }
     }
@@ -186,12 +200,12 @@
       align-items: center;
       margin-bottom: 15px;
       width: 100%;
-
+      
       .slidecontainer {
         display: flex;
         flex-direction: row;
         width: 75%;
-
+        
         #myRange.slider {
           width: 100%;
         }
