--- a/app/assets/stylesheets/9-Home-Page-Component.scss
+++ b/app/assets/stylesheets/9-Home-Page-Component.scss
@@ -1,49 +1,35 @@
-* {
-
-        
-}
-::-webkit-scrollbar {
-width: 15px;
-}
-
-::-webkit-scrollbar-track {
-  background:#121212;
-}
-
-::-webkit-scrollbar-thumb {
-background: #888; 
-}
-
-::-webkit-scrollbar-thumb:hover {
-background: #999; 
-}
-
 .home-page-container {
   position: absolute;
   background-color: #121212;
   width: 100%;
-  height: 250%;
-  padding-bottom: 120px;
+  height: 100%;
+  color: white;
+  overflow: hidden;
+  margin-bottom: 100px;
+  font-family: 'Montserrat', sans-serif;
 
   .inner-home-page-container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    margin: 60px 20px 20px 247px;
-    width: auto;
-    height: 100%;
-    overflow: hidden;
+    background-color: transparent;
     
-      
+    margin: 60px 0px 100px 260px;
+    height: 70%;
+    width: 78.5%;
+    overflow: auto;
+    overflow-x: hidden;
+    margin-bottom: 250px;
+    padding-bottom: 100px;
 
     .discover-container {
       color: white;
       font-family: 'Montserrat', sans-serif;
       
-      padding: 10px 0px 10px 20px;
-      width: 90%;
-      height: 100%;
+      padding: 20px 0px 20px 0px;
+      width: 100%;
+      height: auto;
       margin: 10px;
+      margin-bottom: 20px;
       
       display: flex;
       flex-direction: column; 
@@ -52,19 +38,37 @@ background: #999;
         font-weight: bold;
         font-family: 'Montserrat', sans-serif;
       }
-
       
       .discover-index {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        
-        height: 100%;
+         display: flex;
+        flex-direction: column;
         width: 100%;
-
+        height: 100%;
+        
         div {
+          height: 105%;
+          width: 100%;
+        }
+
+        ul {
+          list-style-type: none;
+          margin-top: 10px;
           height: 100%;
           width: 100%;
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
+          align-content: flex-start;
+          gap: 40px;
+
+
+          li {
+            width: 200px;
+            height: 250px;
+            text-decoration: none;
+            margin: 10px 0px;
+            object-fit: cover;
+          }
         }
       }
     }
