style errors for login and signup

--- a/app/assets/stylesheets/2-SignUp-Component.scss
+++ b/app/assets/stylesheets/2-SignUp-Component.scss
@@ -11,6 +11,14 @@
   font-weight: 600;
   padding-top: 50px;
 
+  .errors {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    color: red
+  }
+
   .signup-inner-header {
     text-align: center;
     flex-direction: column;
