--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,15 @@
     ></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+     <meta property="og:title" content="Satisfy" />
+     <meta property='og:image' content="<%= image_url('/Satisfy/app/assets/images/satisfylikedsongs.JPG') %>"/>
+     <meta property="og:description"
+       content="Satisfy is a Spotify-inspired web app, where users can listen to music, like songs and albums, follow artists, and discover new songs.	"
+     />
+     <meta property="og:url"
+       content="https://satisfy-your-music-cravings.herokuapp.com/#/us"
+
   </head>
 
   <body>
