--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
      <meta name="title" property="og:title" content="Satisfy" />
-     <meta name="image" property='og:image' content="<%= image_url('https://satisfy-seed.s3-us-west-1.amazonaws.com/images/satisfylikedsongs.JPG') %>"/>
+     <meta name="image" property='og:image' content="<%= image_url('https://satisfy-seed.s3.us-west-1.amazonaws.com/images/satisfylikedsongs.JPG') %>"/>
      <meta name="description" property="og:description"
        content="Satisfy is a Spotify-inspired web app, where users can listen to music, like songs and albums, follow artists, and discover new songs.	"
      />
